Fix posts#index overflow bug

--- a/app/assets/stylesheets/application_layout.scss
+++ b/app/assets/stylesheets/application_layout.scss
@@ -61,6 +61,7 @@ nav .home {
   inset: 60px 0 0 0;
   display: flex;
   justify-content: center;
+  overflow: auto;
 }
 
 nav .inverted {
