--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -10,7 +10,6 @@
 
 .post-container .post {
   width: 100%;
-  min-height: 100px;
   background-color: #92dbe59d;
   margin-bottom: 20px;
   padding: 0 20px;
